<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".Login">

    <EditText
        android:id="@+id/et_email_log"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/emailadresse"
        android:inputType="textPersonName|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_passwort_log"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/passwort"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_email_log"
        app:layout_constraintStart_toStartOf="@+id/et_email_log"
        app:layout_constraintTop_toBottomOf="@+id/et_email_log" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#E91E63"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_passwort_log"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/et_passwort_log"
        app:layout_constraintTop_toBottomOf="@+id/et_passwort_log" />
</android.support.constraint.ConstraintLayout>